--- a/sites/all/themes/lapcat/less/compiled.css
+++ b/sites/all/themes/lapcat/less/compiled.css
@@ -84,12 +84,13 @@ li{list-style:none outside none;}
 .navBoxes{height:48px;width:auto;margin:2.5px 0 2.5px 0;background:#f1f1f1;position:relative;border-radius:3px;-webkit-border-radius:3px;vertical-align:middle;}.navBoxes a{box-shadow:inset 0 0 2px 1px rgba(95, 62, 18, 0);-moz-box-shadow:inset 0 0 2px 1px rgba(95, 62, 18, 0);-webkit-box-shadow:inset 0 0 2px 1px rgba(95, 62, 18, 0);text-align:center;line-height:48px;font-size:1.5em;height:48px;width:100%;display:block;}.navBoxes a:hover{box-shadow:inset 0 0 20px 10px rgba(95, 62, 18, 0.19999999999999996);-moz-box-shadow:inset 0 0 20px 10px rgba(95, 62, 18, 0.19999999999999996);-webkit-box-shadow:inset 0 0 20px 10px rgba(95, 62, 18, 0.19999999999999996);}
 .twitterImage{display:inline-block;float:left;}
 .navDisplay{margin-bottom:10px;height:307px;}
-.region-menuheader{width:960px;}.region-menuheader ul{width:100%;}
+.region-menuheader{display:inline-block;}.region-menuheader ul{width:100%;}
 .region-menuheader .leaf{width:9rem;display:inline-block;padding:0;text-align:center;}
 .region-menuheader .first{margin:3px 0 0 8px;}
+.helpLink{font-size:1.3em;}
 .views-slideshow-cycle-main-frame-row *{border-radius:3px;-webkit-border-radius:3px;display:relative;}
 .mainCatalogSearch{position:absolute;top:2px;right:2px;z-index:10;}
-form *{border:none;padding:.1em;height:1.4em;font-size:1em;position:relative;margin:0 3px;}
+form *{border:none;padding:.1em;height:1.4em;font-size:1em;position:relative;margin:0 .05em;}
 input[type="submit"]{font-size:1em;height:1.6em;}
 .mainCatalogSearch input[type="submit"],.mainCatalogSearch select{opacity:.85;}
 .mainCatalogSearch:hover input,.mainCatalogSearch:hover select{opacity:.95;}
@@ -118,7 +119,7 @@ input[type="submit"]{font-size:1em;height:1.6em;}
 .articleEntryAuthor{font-size:10px;color:#1d1d1d;}.articleEntryAuthor img{height:24px;width:24px;}
 .articleEntryDescription{width:600px;overflow:hidden;}
 .topNav{width:940px;}
-.secondNav{font-weight:bold;font-size:15px;position:relative;height:24px;}
+.secondNav{font-weight:bold;font-size:1.2em;position:relative;height:24px;}
 .siteMap .secondNav{background:#e7f2e6;height:20px;}
 .logoTree{max-height:75px;max-width:68px;}
 .subPageHeader{font-size:50px;height:120px;padding:3px 3px 3px 10px;margin:0 5px 10px 5px;background:url('/sites/all/themes/lapcat/images/LaPorte_County_Public_Library.jpg') no-repeat;background-size:cover;background-position:0px;}.subPageHeader div{display:table-cell;vertical-align:middle;white-space:nowrap;height:90px;width:100%;}
@@ -127,8 +128,9 @@ input[type="submit"]{font-size:1em;height:1.6em;}
 .subPageCatalogSearch{position:absolute;right:5px;top:0;opacity:1;z-index:10;background:#E0E0E0;padding:3px;border-top-right-radius:3px;border-bottom-left-radius:3px;}
 .subPageCatalogSearch .catalog{display:inline-block;}
 .secondNav a:hover,.firstNav a:hover,.eventFeedTitle a:hover{color:#1d1d1d;}
-.hoverGlow{-webkit-transition:all 300ms linear;-moz-transition:all 300ms linear;-ms-transition:all 300ms linear;-o-transition:all 300ms linear;transition:all 300ms linear;}
+.hoverGlow,.hoverGlowText{-webkit-transition:all 300ms linear;-moz-transition:all 300ms linear;-ms-transition:all 300ms linear;-o-transition:all 300ms linear;transition:all 300ms linear;}
 .hoverGlow:hover{box-shadow:0 0 2px 2px #5f3e12;-moz-box-shadow:0 0 2px 2px #5f3e12;-webkit-box-shadow:0 0 2px 2px #5f3e12;}
+.hoverGlowText:hover{text-shadow:0 0 4px #5f3e12;-moz-text-shadow:0 0 4px #5f3e12;-webkit-text-shadow:0 0 4px #5f3e12;}
 .locationBoxInfo{width:40%;float:left;}
 .locationBoxMap{width:60%;float:left;}
 .centerBox{margin:0 auto;width:918px;}
